--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -1,16 +1,47 @@
+{% load static %}
+<script src="{% static 'main/js/create.js' %}"></script>
+
 <h2>Create Interview Question</h2>
 
-<h3>Step 0: Name Your Question:</h3<br/>
-
-<h3>Step 1: Define Your API</h3><br/>
-
-<h3>Step 2: Provide Useful Example Code</h3><br />
-
-<h3>Step 3: Write Your Question</h3>
-
-
 <form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Create Interview Question</button>
-</form>
+    {% csrf_token %}
+    <div id="form_errors">
+        {% if error_message %}
+            {{ error_message }}
+        {% endif %}
+    </div>
+
+    <h3>Step 0: Name Your Question:</h3><br />
+        <label htmlFor="name">Name of Question</label>
+        <input id="name" maxlength="128" name="name" type="text" /><br />
+        
+    <h3>Step 1: Define Your API</h3><br />
+
+    <label htmlFor="api_description">Description of Question</label>
+    <textarea id="api_description" name="api_description"></textarea><br/>
+
+        <div id="api_fields">
+            <div>
+                <label htmlFor="api_method_1">Method:</label><br/>
+                <textarea id="api_method_1" name="api_method_1" ></textarea><br />
+            </div>
+        </div>
+        <button type="button" onclick="add_api_field()">Add</button>
+
+
+    <h3>Step 2: Provide Useful Example Code</h3><br />
+        <div id="code_fields">
+            <div>
+                <label htmlFor="code_body_1">Code:</label><br/>
+                <textarea id="code_body_1" name="code_body_1" ></textarea><br />
+            </div>
+        </div>
+        <button type="button" onclick="add_code_body()">Add</button>
+
+    <h3>Step 3: Write Your Question</h3><br>
+
+    <label htmlFor="description">Description of Question</label>
+    <input id="description" maxlength="128" name="description" type="text" /><br/>
+
+    <button type="submit">Create Interview Question</button>
+</form
