--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -1,60 +1,115 @@
+{% extends "base.html" %}
 {% load static %}
+{% block css_imports %}
+<link href="{% static 'interview/creation/main.css' %}" rel="stylesheet">
+{% endblock %}
+
+{% block content %}
+<div class="container" style="padding-top: 70px; max-width: 90vw;">
+    <div class="row">
+        <div class="col-sm-12">
+                <div class="py-5 text-center">
+                    <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
+                    <h2>Create Interview Question</h2>
+                    <p class="lead">Follow the 4 step process below to create your interview question.</p>
+                </div>
+
+            <form method="post">
+                {% csrf_token %}
+                <div id="form_errors">
+                    {% if error_message %}
+                        {{ error_message }}
+                    {% endif %}
+                </div>
+                <div class="form-group, step">
+                    <h2 class="step-title">Step 0: Name + Description of Your Question:</h2><br />
+                    <p class="step-description">In this step, provide a name for your question. 
+                        Additionally, provide the description of what the user has to do .
+                        This description will show up to the user.
+                    </p>
+                    <label htmlFor="name">Name of Question (Visible to users)</label>
+                    <input class="form-control" id="name" maxlength="128" name="name" type="text" /><br />
+
+                    <label htmlFor="description">Description of Question (Visible to users)</label>
+                    <textarea class="form-control" id="description" name="description" rows=5></textarea><br/>
+                </div>
+                <div class="form-group, step">
+                    <h2 class="step-title">Step 1: Write Your Supporting Code</h2><br />
+                    <p class="step-description">In this step, write the code that will run under the hood.
+                        This may be a class for instance.
+                    </p>
+                    <label>Supporting Code (Not visible to users)</label> <br />
+                    <div id="supporting_code" style="height: 20vh; width: 100%">class example:
+    def __init__(self):
+        self.value = 5
+    def return_value(self):
+        return self.value
+                    </div>
+                    <textarea name="supporting_code"></textarea>
+                </div>
+                <div class="form-group, step">
+                    <h1>Step 2: Define Your API</h1><br />
+                    <p class="step-description">In this step, you will declare what methods are available to the user via the API. For example, you might declare that the return_value function is available to them.</p>
+                    <label htmlFor="api_description">Description of API (Visible to users)</label> <br />
+                    <textarea class="form-control" id="api_description" name="api_description" rows=5></textarea><br/>
+
+                    <center><label>Methods Shown To The User (Visible to users)</label><hr /></center>
+                    <div id="api_fields">
+                        <div>
+                            <label htmlFor="api_method_1">Method:</label><br/>
+                            <textarea class="form-control" id="api_method_1" name="api_method_1" ></textarea><br />
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-secondary" onclick="add_api_field()">Add</button>
+
+                </div>
+                <div class="form-group, step">
+                <h1>Step 3: Provide Useful Example Code</h1><br />
+                    <p class="step-description">In this step, you provide example code snippets.</p>
+                    <div id="code_fields">
+                        <div>
+                            <div id="code_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
+                            <textarea name="code_body_1"></textarea>
+                        </div>
+                    </div>
+                    <button type="button" onclick="add_code_body()">Add</button>
+               
+                </div>
+                <div class="form-group, step"></div>
+                    <h1>Step 4: Provide Test Cases</h1><br />
+                    <p class="step-description">In this step, you provide test cases.</p>
+                    <div id="test_cases">
+                        <div>
+                            <label htmlFor="test_case_1">Test Case:</label><br/>
+                            <textarea id="test_case_1" name="test_case_1" ></textarea><br />
+                        </div>
+                    </div>
+                </div>
+                <button type="button" onclick="add_test_case()">Add</button>
+                <br /><br />
+                <p>Make your question open to the public for all users?</p>
+                <button type="submit">Create Interview Question</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM=" crossorigin="anonymous"></script>    
+<script>
+    function textarea_edit(name) {
+        var editor = ace.edit(name);
+        editor.setTheme("ace/theme/chrome");
+        editor.session.setMode("ace/mode/python");
+
+        var textarea = $('textarea[name="' + name + '"]').hide();
+        textarea.val(editor.getSession().getValue());
+        editor.getSession().on('change', function(){
+            textarea.val(editor.getSession().getValue());
+        });
+    }
+    textarea_edit("supporting_code");
+    textarea_edit("code_body_1");
+</script>
 <script src="{% static 'main/js/create.js' %}"></script>
-
-<h2>Create Interview Question</h2>
-
-<form method="post">
-    {% csrf_token %}
-    <div id="form_errors">
-        {% if error_message %}
-            {{ error_message }}
-        {% endif %}
-    </div>
-
-    <h3>Step 0: Name + Description of Your Question:</h3><br />
-        <label htmlFor="name">Name of Question</label>
-        <input id="name" maxlength="128" name="name" type="text" /><br />
-    
-    <h3>Step 1: Write Your Code (Class)</h3><br />
-    <label htmlFor="supporting_code">Supporting Code</label> <br />
-    <textarea id="supporting_code" name="supporting_code"></textarea><br/>
-
-    <h3>Step 2: Define Your API</h3><br />
-
-    <label htmlFor="api_description">Description of API</label> <br />
-    <textarea id="api_description" name="api_description"></textarea><br/>
-
-        <div id="api_fields">
-            <div>
-                <label htmlFor="api_method_1">Method:</label><br/>
-                <textarea id="api_method_1" name="api_method_1" ></textarea><br />
-            </div>
-        </div>
-        <button type="button" onclick="add_api_field()">Add</button>
-
-
-    <h3>Step 3: Provide Useful Example Code</h3><br />
-        <div id="code_fields">
-            <div>
-                <label htmlFor="code_body_1">Code:</label><br/>
-                <textarea id="code_body_1" name="code_body_1" ></textarea><br />
-            </div>
-        </div>
-        <button type="button" onclick="add_code_body()">Add</button>
-
-    <h3>Step 4: Write Your Question</h3><br>
-
-    <label htmlFor="description">Description of Question</label>
-    <input id="description" maxlength="128" name="description" type="text" /><br/>
-
-    <h3>Step 5: Provide Test Cases</h3><br />
-    <div id="test_cases">
-        <div>
-            <label htmlFor="test_case_1">Test Case:</label><br/>
-            <textarea id="test_case_1" name="test_case_1" ></textarea><br />
-        </div>
-    </div>
-    <button type="button" onclick="add_test_case()">Add</button>
-    <br /><br />
-    <button type="submit">Create Interview Question</button>
-</form>
+{% endblock %}
