--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -10,13 +10,14 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-color: #7373fd">
+          <div class="image-box">
           <div class="image-title">
-            <h1>Join the Interview <br/> Question Revolution</h1>
-            <p>Stop using low signal algorithm interview questions. Interview like you were doing a job.</p>
+              <h1>Join the Interview <br/> Question Revolution</h1>
+              <p>Stop using low signal algorithm interview questions. Interview like you were doing a job.</p>
+            </div>
           </div>
           <a class="image-button" href="/users/signup">Sign Up</a>
-          <img class="image-screenshot">
-          Screenshot goes here
+          <img class="image-screenshot" src="{% static 'images/screenshot.png' %}" alt="" width="400" height="400">
         </div>
       </div>
     </div>
