--- a/frontend_templates/registration/signup.html
+++ b/frontend_templates/registration/signup.html
@@ -1,12 +1,25 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
+{% block css_imports %}
+{% endblock %}
 
-{% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<h2>Sign up</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Sign up</button>
-</form>
+<center>
+<div style="padding-top: 10vh; max-width: 30vw;">
+    <form class="form-signin" method="post">
+      {% csrf_token %}
+      <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">SIGN UP</h1>
+      <label for="email" class="sr-only">Email address</label>
+      <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
+      <label for="password" class="sr-only">Password</label>
+      <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br />
+      <label for="id_password2" class="sr-only">Confirm Password</label>
+      <input type="password" id="id_password2" name="password" class="form-control" placeholder="Confirm Password" required>
+      <br /><br />
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+    </form>
+</div>
+</center>
 {% endblock %}
