--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -11,7 +11,7 @@
                 <div class="py-5 text-center">
                     <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
                     <h2>Create Interview Question</h2>
-                    <p class="lead">Follow the 4 step process below to create your interview question.</p>
+                    <p class="lead">Follow the 6 step process below to create your interview question.</p>
                 </div>
 
             <form method="post">
@@ -76,7 +76,14 @@
 
                 </div>
                 <div class="form-group, step">
-                <h1>Step 3: Provide Useful Example Code</h1><br />
+                    <h1>Step 3: Provide Starter Code</h1><br />
+                    <p class="step-description">In this step, you provide some starter code that the user can optionally fill out.</p>
+                    <label>Starter Code (visible to users)</label> <br />
+                    <div id="starter_code" style="height: 20vh; width: 100%"></div>
+                    <textarea name="starter_code"></textarea>
+                </div>
+                <div class="form-group, step">
+                <h1>Step 4: Provide Useful Example Code</h1><br />
                     <p class="step-description">In this step, you provide example code snippets.</p>
                     <div id="code_fields">
                         <div>
@@ -84,16 +91,16 @@
                             <textarea name="code_body_1"></textarea>
                         </div>
                     </div>
-                    <button type="button" onclick="add_code_body()">Add</button>
+                    <button type="button" class="btn btn-secondary" onclick="add_code_body()">Add</button>
                 </div>
                 <div class="form-group, step">
-                    <h1>Step 4: Provide Test Cases</h1><br />
+                    <h1>Step 5: Provide Test Cases</h1><br />
                     <p class="step-description">In this step, you provide test cases.</p>
                     <div id="test_cases" style="height: 20vh; width: 100%"></div>
                     <textarea name="test_cases"></textarea>
                 </div>
                 <div class="form-group, step">
-                    <h1>Step 5: Provide A Solution</h1><br />
+                    <h1>Step 6: Provide A Solution</h1><br />
                     <p class="step-description">In this step, you should provide a solution to ensure the code compiles. If you do not provide this, then the only way to validate behavior is to try out the question.</p>
                     <div id="solution" style="height: 20vh; width: 100%"></div>
                     <textarea name="solution"></textarea>
@@ -120,6 +127,7 @@
         });
     }
     textarea_edit("supporting_code");
+    textarea_edit("starter_code");
     textarea_edit("code_body_1");
     textarea_edit("test_cases");
     textarea_edit("solution");
