--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -14,7 +14,7 @@
                     <p class="lead">Follow the 6 step process below to create your interview question.</p>
                 </div>
 
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div id="form_errors">
                     {% if error_message %}
@@ -39,7 +39,7 @@
                     </select> <br/>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="is_open">
+                        <input class="form-check-input" type="checkbox" value="" id="is_open" name="is_open">
                         <label class="form-check-label" for="is_open">
                                 Make your question open to the public for all users?
                         </label>
@@ -52,8 +52,9 @@
                     </p>
                     <div id="supporting_fields">
                         <div>
-                            <div>Code<label class="switch"><input type="checkbox" id="supporting_switch_1"><span class="slider round"></span></label> File</div>
+                            <div>Code<label class="switch"><input type="checkbox" name="supporting_switch_1" id="supporting_switch_1"><span class="slider round"></span></label> File</div>
                             <div><input class="inputfile" type="file" id="supporting_file_1" name="supporting_file_1"></div>
+                            <div><input class="form-control name-of-file" id="supporting_body_name_1" maxlength="128" name="supporting_body_name_1" placeholder="Name of file"></input></div>
                             <div id="supporting_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
                             <textarea name="supporting_body_1"></textarea>
                         </div>
@@ -82,8 +83,9 @@
                     <p class="step-description">In this step, you provide some starter code that the user can optionally fill out.</p>
                     <label>Starter Code (visible to users)</label> <br />
 
-                    <div>Code<label class="switch"><input type="checkbox" id="starter_switch_1"><span class="slider round"></span></label> File</div>
+                    <div>Code<label class="switch"><input type="checkbox" name="starter_switch_1" id="starter_switch_1"><span class="slider round"></span></label> File</div>
                     <div><input class="inputfile" type="file" id="starter_file_1" name="starter_file_1"></div>
+                    <div><input class="form-control name-of-file" id="starter_body_name_1" maxlength="128" name="starter_body_name_1" placeholder="Name of file"></input></div>
                     <div id="starter_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
                     <textarea name="starter_body_1"></textarea>
                 </div>
@@ -92,8 +94,9 @@
                     <p class="step-description">In this step, you provide example code snippets and files.</p>
                     <div id="example_fields">
                         <div>
-                            <div>Code<label class="switch"><input type="checkbox" id="example_switch_1"><span class="slider round"></span></label> File</div>
+                            <div>Code<label class="switch"><input type="checkbox" name="example_switch_1" id="example_switch_1"><span class="slider round"></span></label> File</div>
                             <div><input class="inputfile" type="file" id="example_file_1" name="example_file_1"></div>
+                            <div><input class="form-control name-of-file" id="example_body_name_1" maxlength="128" name="example_body_name_1" placeholder="Name of file"></input></div>
                             <div id="example_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
                             <textarea name="example_body_1"></textarea>
                         </div>
@@ -105,16 +108,18 @@
                     <h1 class="step-title">Step 5: Provide Test Cases</h1><br />
                     <p class="step-description">In this step, you provide test cases.</p>
 
-                    <div>Code<label class="switch"><input type="checkbox" id="test_switch_1"><span class="slider round"></span></label> File</div>
+                    <div>Code<label class="switch"><input type="checkbox" name="test_switch_1" id="test_switch_1"><span class="slider round"></span></label> File</div>
                     <div><input class="inputfile" type="file" id="test_file_1" name="test_file_1"></div>
+                    <div><input class="form-control name-of-file" id="test_body_name_1" maxlength="128" name="test_body_name_1" placeholder="Name of file"></input></div>
                     <div id="test_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
                     <textarea name="test_body_1"></textarea>
                 </div>
                 <div class="form-group, step">
                     <h1 class="step-title">Step 6: Provide A Solution</h1><br />
                     <p class="step-description">In this step, you should provide a solution to ensure the code compiles. If you do not provide this, then the only way to validate behavior is to try out the question.</p>
-                    <div>Code<label class="switch"><input type="checkbox" id="solution_switch_1"><span class="slider round"></span></label> File</div>
+                    <div>Code<label class="switch"><input type="checkbox" name="solution_switch_1" id="solution_switch_1"><span class="slider round"></span></label> File</div>
                     <div><input class="inputfile" type="file" id="solution_file_1" name="solution_file_1"></div>
+                    <div><input class="form-control name-of-file" id="solution_body_name_1" maxlength="128" name="solution_body_name_1" placeholder="Name of file"></input></div>
                     <div id="solution_body_1" style="height: 20vh; width: 100%; margin-bottom: 1vh"></div>
                     <textarea name="solution_body_1"></textarea>
                 </div>
@@ -149,10 +154,12 @@
         $("#" + name + "_file_" + number).hide();
         $("#" + name + "_switch_" + number).change(function() {
             if(this.checked) {
+                $("#" + name + "_body_name_" + number).hide();
                 $("#" + name + "_body_" + number).hide();
                 $("#" + name + "_file_" + number).show();
             } else {
                 $("#" + name + "_body_" + number).show();
+                $("#" + name + "_body_name_" + number).show();
                 $("#" + name + "_file_" + number).hide();
             }
         });
